# humanoid-arm-demo-eth

./: .gitignore  2  CLAUDE.md  MOVEIT_ARM_SETUP.md  MOVEIT_SETUP_GUIDE.md  verify_moveit_setup.sh
install/myactuator_x6_test/share/myactuator_x6_test/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/myactuator_x6_test/share/myactuator_x6_test/config/: controllers.yaml  controllers_effort.yaml  controllers_position.yaml  myactuator_x6.yaml  myactuator_x6_motor0.yaml  myactuator_x6_specs.md
install/myactuator_x6_test/share/myactuator_x6_test/launch/: x6_base.launch.py  x6_effort.launch.py  (+2 more)
src/myactuator_arm/: CMakeLists.txt  README.md
src/myactuator_arm/config/controllers/: arm_controllers.yaml
src/myactuator_arm/config/ethercat/: joint4_motor.yaml
src/myactuator_arm/config/rviz/: visualize.rviz
src/myactuator_arm/description/meshes/: f1.part  f2.part
src/myactuator_arm/description/urdf/: arm_description.urdf.xacro  arm_full.urdf.xacro
src/myactuator_arm/launch/: arm_monitor.launch.py  arm_moveit.launch.py
src/myactuator_arm/robot_arm/: robot.urdf
src/myactuator_arm/robot_arm/assets/: f5.part  hand.part  l_lower_forearm.part  l_upper_arm.part  menghina_x6.part  table.stl
src/myactuator_arm/robot_arm_6dof/: config.json  robot.urdf  robot_with_control.urdf.xacro
src/myactuator_arm/robot_arm_6dof/assets/: arm_limiter.part  elbow_limiter.part  f1.part  f2.part  f3.part  f4.part  f5.part  forearm_limiter.part  hand.part  hand_limiter.part  l_elbow.part  l_lower_forearm.part  l_shoulder.part  l_upper_arm.part  l_upper_forearm.part  l_wrist.part  menghina_x6.part  shoulder_limiter.part  spacer_x6_menghina_m4x60.part  table.part  torso_limiter.part
src/myactuator_arm/robot_arm_new/: config.json  robot.urdf
src/myactuator_arm/robot_arm_new/assets/: arm_limiter.part  arm_limiter.stl  elbow_limiter.part  f1.part  f2.part  f3.part  f4.part  f5.part  forearm_limiter.part  hand.part  hand_limiter.part  hand_limiter.stl  l_elbow.part  l_lower_forearm.part  l_shoulder.part  l_upper_arm.part  l_upper_forearm.part  menghina_x6.part  shoulder_limiter.part  shoulder_limiter.stl  spacer_x6_menghina_m4x60.part  table.part  torso_limiter.part  torso_limiter.stl
src/myactuator_arm/scripts/: set_zero.py  test_position.py
src/myactuator_x6_test/: CMakeLists.txt
src/myactuator_x6_test/config/: controllers_dual.yaml  myactuator_x6_motor1.yaml  myactuator_x6_with_offset.yaml
src/myactuator_x6_test/launch/: x6_effort_safe.launch.py  x6_free.launch.py  x6_test.launch.py
src/myactuator_x6_test/scripts/: controller_switcher.py  mode_switcher.py  test_compliance.py  test_moveit_ready.py  test_simple_position.py  test_speed_position.py  test_trajectory.py
src/myactuator_x6_test/urdf/: x6_test.urdf.xacro  x6_test_free.urdf.xacro
(+170 files in other folders)
